# web-osi-visualiser

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_docker.bat
app/: main.py
app/api/: routes.py
app/core/: config.py  logging_config.py
app/layers/: application.py  network.py  phys_link.py  presentation.py  session.py  transport.py
app/schemas/: analysis.py
app/services/: ai_analyst.py  analyzer.py  education.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  attack.js  main.js  stack.js  ui.js  viz.js
scripts/: deploy.sh
tests/: test_api.py
